Add WarmDM logo + favicon

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WarmDM</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -12,9 +13,21 @@
   <div class="app-container">
 
     <header class="header">
-      <h1 class="title">Rewrite any message so it sounds human.</h1>
-      <p class="subtitle">No cringe. No AI vibes. Just natural tone.</p>
-    </header>
+
+    <h1 class="logo">
+    <span class="logo-icon">WM</span>
+    WarmDM
+    </h1>
+
+    <h2 class="title">
+    Rewrite any message so it sounds human.
+    </h2>
+
+    <p class="subtitle">
+    No cringe. No AI vibes. Just natural tone.
+    </p>
+
+  </header>
 
     <section class="input-section">
 
