--- a/public/index.html
+++ b/public/index.html
@@ -3,65 +3,195 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WarmDM</title>
+
+  <title>WarmDM – Rewrite any message so it sounds human</title>
+
+  <meta name="description"
+        content="WarmDM is an AI message rewriter that makes any DM, email or post sound human, natural and non-cringe. No AI vibes, just real tone." />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <div class="app-container">
+  <div class="page-shell">
 
+    <!-- HEADER + LOGO -->
     <header class="header">
+      <h1 class="logo">
+        <span class="logo-icon">WM</span>
+        WarmDM
+      </h1>
 
-    <h1 class="logo">
-    <span class="logo-icon">WM</span>
-    WarmDM
-    </h1>
+      <h2 class="title">
+        Rewrite any message so it sounds human.
+      </h2>
 
-    <h2 class="title">
-    Rewrite any message so it sounds human.
-    </h2>
+      <p class="subtitle">
+        No cringe. No AI vibes. Just natural tone.
+      </p>
+    </header>
 
-    <p class="subtitle">
-    No cringe. No AI vibes. Just natural tone.
-    </p>
+    <!-- TOOL (TOP OF PAGE) -->
+    <main>
+      <section class="app-container" id="app">
+        <section class="input-section">
+          <textarea
+            id="inputMessage"
+            placeholder="Paste your message — I won’t judge.">
+          </textarea>
 
-  </header>
+          <div class="controls-row">
+            <select id="toneSelect">
+              <option value="Warm">Warm</option>
+              <option value="Casual">Casual</option>
+              <option value="Authority">Authority</option>
+              <option value="Cheeky">Cheeky</option>
+              <option value="AI-Undetectable">AI-Undetectable</option>
+            </select>
 
-    <section class="input-section">
+            <label class="toggle-label">
+              <input type="checkbox" id="unfilteredToggle" />
+              Unfiltered 😈
+            </label>
+          </div>
 
-      <textarea
-        id="inputMessage"
-        placeholder="Paste your message — I won’t judge."
-      ></textarea>
+          <button id="rewriteBtn" class="primary-btn">
+            Make It Sound Human
+          </button>
+        </section>
 
-      <div class="controls-row">
+        <section class="output-section" id="outputSection">
+          <!-- Rewrites appear here -->
+        </section>
+      </section>
 
-        <select id="toneSelect">
-          <option value="Warm">Warm</option>
-          <option value="Casual">Casual</option>
-          <option value="Authority">Authority</option>
-          <option value="Cheeky">Cheeky</option>
-          <option value="AI-Undetectable">AI-Undetectable</option>
-        </select>
+      <!-- BELOW-THE-FOLD INFO / LANDING CONTENT -->
+      <section class="info-section">
+        <h3>What WarmDM actually does</h3>
+        <p>
+          WarmDM is a small, focused AI message rewriter. You paste a DM, email,
+          LinkedIn message, sales opener, or “uh… not my best work” text,
+          and it rewrites it so it sounds human — not like a robot trying to sell
+          you crypto in 2018.
+        </p>
+        <p>
+          Instead of obsessing over grammar, WarmDM focuses on tone:
+          how your message <em>feels</em> when someone reads it. Warm, casual,
+          cheeky, more authoritative — you pick the vibe, it rewrites the message.
+        </p>
 
-        <label class="toggle-label">
-          <input type="checkbox" id="unfilteredToggle" />
-          Unfiltered 😈
-        </label>
+        <div class="feature-grid">
+          <div class="feature-card">
+            <h4>AI message rewriter</h4>
+            <p>
+              Paste anything and get a human-sounding version back in seconds.
+              No templates, no forms, no overthinking — just rewrite and send.
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4>Tone that actually fits</h4>
+            <p>
+              Switch between Warm, Casual, Authority, Cheeky, or AI-Undetectable.
+              Same message, different delivery. Great for testing what gets replies.
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4>Built for real conversations</h4>
+            <p>
+              Use it for Twitter/X DMs, sales outreach, intros, dating apps,
+              support messages — anywhere sounding human matters more than sounding
+              “perfect”.
+            </p>
+          </div>
+        </div>
+      </section>
 
-      </div>
+      <section class="info-section">
+        <h3>Who WarmDM is for</h3>
+        <ul class="bullet-list">
+          <li><strong>Founders & indie hackers</strong> who hate writing cold outreach.</li>
+          <li><strong>Creators & marketers</strong> who want higher reply rates without sounding spammy.</li>
+          <li><strong>Operators & PMs</strong> who need to send “one shot” messages that land well.</li>
+          <li><strong>Anyone</strong> who reads their own message back and thinks: “Nope, that’s not it.”</li>
+        </ul>
+      </section>
 
-      <button id="rewriteBtn" class="primary-btn">
-        Make It Sound Human
-      </button>
+      <section class="info-section">
+        <h3>How it works (in 20 seconds)</h3>
+        <ol class="inline-steps">
+          <li><span>1</span> Paste your message.</li>
+          <li><span>2</span> Pick a tone (or Unfiltered 😈).</li>
+          <li><span>3</span> Click “Make It Sound Human”.</li>
+          <li><span>4</span> Copy the version that feels right and send it.</li>
+        </ol>
+      </section>
 
-    </section>
+      <section class="info-section seo-block">
+        <h3>WarmDM as an AI message rewriter</h3>
+        <p>
+          Under the hood, WarmDM works like an AI message rewriter: it takes your
+          original text, keeps the meaning, and rebuilds the delivery so it reads
+          more like a real human wrote it. That could mean changing the rhythm,
+          softening the edges, adding a bit of charm, or stripping out the robotic
+          “AI email” feel that everyone’s starting to recognise.
+        </p>
+        <p>
+          You can use WarmDM as a lightweight alternative to heavier writing tools.
+          It doesn’t try to write full blog posts or entire funnels — it just helps
+          you send messages that people actually want to reply to.
+        </p>
+      </section>
 
-    <section class="output-section" id="outputSection">
-      <!-- AI rewrites appear here -->
-    </section>
+      <section class="info-section faq-section">
+        <h3>FAQ</h3>
+
+        <div class="faq-item">
+          <h4>Is WarmDM the same as Grammarly?</h4>
+          <p>
+            No. Grammarly is about correctness. WarmDM is about tone.
+            It assumes your basic message is fine and focuses on making it sound
+            more human, less stiff, and more likely to get a reply.
+          </p>
+        </div>
+
+        <div class="faq-item">
+          <h4>What kind of messages does this work best on?</h4>
+          <p>
+            DMs, intros, outreach, “sorry this is a bit last minute” messages,
+            follow-ups, soft pitches, and anything where you don’t want to sound
+            needy, robotic, or weirdly intense. If a real person needs to read it,
+            WarmDM probably helps.
+          </p>
+        </div>
+
+        <div class="faq-item">
+          <h4>Does WarmDM store my messages?</h4>
+          <p>
+            Messages are processed by the model and not stored for product
+            training. For production use, you should still avoid pasting
+            highly sensitive information — treat it like any other external tool.
+          </p>
+        </div>
+
+        <div class="faq-item">
+          <h4>Will there be paid plans later?</h4>
+          <p>
+            Most likely. The first version is focused on usefulness and traction.
+            If people love using it, limits and a simple paid tier will come later
+            so the tool can keep running and improving.
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p>WarmDM &middot; Rewrite any message so it sounds human.</p>
+      <p class="footer-sub">
+        Built as a small, focused tool. No fluff, no bloat.
+      </p>
+    </footer>
 
   </div>
 
