Add legal pages

--- a/public/index.html
+++ b/public/index.html
@@ -187,11 +187,14 @@
     </main>
 
     <footer class="footer">
-      <p>WarmDM &middot; Rewrite any message so it sounds human.</p>
-      <p class="footer-sub">
-        Built as a small, focused tool. No fluff, no bloat.
-      </p>
-    </footer>
+  <p>WarmDM · Rewrite any message so it sounds human.</p>
+  <p class="footer-sub">
+    <a href="/privacy">Privacy Policy</a> ·
+    <a href="/terms">Terms</a> ·
+    <a href="/disclaimer">Disclaimer</a>
+  </p>
+</footer>
+
 
   </div>
 
