Add personas logic

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,16 @@
             </label>
           </div>
 
+          <div class="persona-row">
+            <span class="persona-label">Personas:</span>
+              <button type="button" class="persona-btn active" data-persona="Default">Default</button>
+              <button type="button" class="persona-btn" data-persona="Friendly founder">Friendly founder</button>
+              <button type="button" class="persona-btn" data-persona="Dry professional">Dry professional</button>
+              <button type="button" class="persona-btn" data-persona="Cheeky friend">Cheeky friend</button>
+              <button type="button" class="persona-btn" data-persona="Soft apology">Soft apology</button>
+          </div>
+
+
           <button id="rewriteBtn" class="primary-btn">
             Make It Sound Human
           </button>
