Update frontend + backend

--- a/public/index.html
+++ b/public/index.html
@@ -66,15 +66,17 @@
               <button type="button" class="persona-btn" data-persona="Soft apology">Soft apology</button>
           </div>
 
+          <p class="persona-hint">
+            <strong>Tone = vibe.</strong> <strong>Persona = voice.</strong>
+            Combine both for the perfect rewrite.
+          </p>
 
           <button id="rewriteBtn" class="primary-btn">
             Make It Sound Human
           </button>
         </section>
 
-        <section class="output-section" id="outputSection">
-          <!-- Rewrites appear here -->
-        </section>
+        <section class="output-section" id="outputSection"></section>
       </section>
 
       <!-- BELOW-THE-FOLD INFO / LANDING CONTENT -->
@@ -97,20 +99,20 @@
             <h4>AI message rewriter</h4>
             <p>
               Paste anything and get a human-sounding version back in seconds.
-              No templates, no forms, no overthinking — just rewrite and send.
             </p>
           </div>
+
           <div class="feature-card">
             <h4>Tone that actually fits</h4>
             <p>
               Switch between Warm, Casual, Authority, Cheeky, or AI-Undetectable.
-              Same message, different delivery. Great for testing what gets replies.
             </p>
           </div>
+
           <div class="feature-card">
             <h4>Built for real conversations</h4>
             <p>
-              Use it for Twitter/X DMs, sales outreach, intros, dating apps,
+              Use it for Twitter/X DMs, sales outreach, dating apps, intros,
               support messages — anywhere sounding human matters more than sounding
               “perfect”.
             </p>
@@ -122,9 +124,9 @@
         <h3>Who WarmDM is for</h3>
         <ul class="bullet-list">
           <li><strong>Founders & indie hackers</strong> who hate writing cold outreach.</li>
-          <li><strong>Creators & marketers</strong> who want higher reply rates without sounding spammy.</li>
-          <li><strong>Operators & PMs</strong> who need to send “one shot” messages that land well.</li>
-          <li><strong>Anyone</strong> who reads their own message back and thinks: “Nope, that’s not it.”</li>
+          <li><strong>Creators & marketers</strong> who want higher reply rates.</li>
+          <li><strong>Operators & PMs</strong> sending “one shot” messages.</li>
+          <li><strong>Anyone</strong> who reads their message and thinks: “Nope, that’s not it.”</li>
         </ul>
       </section>
 
@@ -132,25 +134,17 @@
         <h3>How it works (in 20 seconds)</h3>
         <ol class="inline-steps">
           <li><span>1</span> Paste your message.</li>
-          <li><span>2</span> Pick a tone (or Unfiltered 😈).</li>
+          <li><span>2</span> Pick a tone + persona.</li>
           <li><span>3</span> Click “Make It Sound Human”.</li>
-          <li><span>4</span> Copy the version that feels right and send it.</li>
+          <li><span>4</span> Copy the version that works.</li>
         </ol>
       </section>
 
       <section class="info-section seo-block">
         <h3>WarmDM as an AI message rewriter</h3>
         <p>
-          Under the hood, WarmDM works like an AI message rewriter: it takes your
-          original text, keeps the meaning, and rebuilds the delivery so it reads
-          more like a real human wrote it. That could mean changing the rhythm,
-          softening the edges, adding a bit of charm, or stripping out the robotic
-          “AI email” feel that everyone’s starting to recognise.
-        </p>
-        <p>
-          You can use WarmDM as a lightweight alternative to heavier writing tools.
-          It doesn’t try to write full blog posts or entire funnels — it just helps
-          you send messages that people actually want to reply to.
+          WarmDM keeps your meaning but rewrites your delivery so it sounds
+          like a real human wrote it — softer, smoother, funnier, or more confident.
         </p>
       </section>
 
@@ -159,52 +153,33 @@
 
         <div class="faq-item">
           <h4>Is WarmDM the same as Grammarly?</h4>
-          <p>
-            No. Grammarly is about correctness. WarmDM is about tone.
-            It assumes your basic message is fine and focuses on making it sound
-            more human, less stiff, and more likely to get a reply.
-          </p>
-        </div>
-
-        <div class="faq-item">
-          <h4>What kind of messages does this work best on?</h4>
-          <p>
-            DMs, intros, outreach, “sorry this is a bit last minute” messages,
-            follow-ups, soft pitches, and anything where you don’t want to sound
-            needy, robotic, or weirdly intense. If a real person needs to read it,
-            WarmDM probably helps.
-          </p>
+          <p>No. Grammarly focuses on correctness. WarmDM focuses on tone.</p>
         </div>
 
         <div class="faq-item">
           <h4>Does WarmDM store my messages?</h4>
           <p>
-            Messages are processed by the model and not stored for product
-            training. For production use, you should still avoid pasting
-            highly sensitive information — treat it like any other external tool.
+            Messages are processed but not stored for product training.
           </p>
         </div>
 
         <div class="faq-item">
-          <h4>Will there be paid plans later?</h4>
+          <h4>Will there be paid plans?</h4>
           <p>
-            Most likely. The first version is focused on usefulness and traction.
-            If people love using it, limits and a simple paid tier will come later
-            so the tool can keep running and improving.
+            Yes — once traction proves what people need.
           </p>
         </div>
       </section>
     </main>
 
     <footer class="footer">
-  <p>WarmDM · Rewrite any message so it sounds human.</p>
-  <p class="footer-sub">
-    <a href="/privacy">Privacy Policy</a> ·
-    <a href="/terms">Terms</a> ·
-    <a href="/disclaimer">Disclaimer</a>
-  </p>
-</footer>
-
+      <p>WarmDM · Rewrite any message so it sounds human.</p>
+      <p class="footer-sub">
+        <a href="/privacy">Privacy Policy</a> ·
+        <a href="/terms">Terms</a> ·
+        <a href="/disclaimer">Disclaimer</a>
+      </p>
+    </footer>
 
   </div>
 
