--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>WarmDM – Rewrite any message so it sounds human</title>
+  <title>WarmDM – Rewrite any message so it sounds human.</title>
 
   <meta name="description"
-        content="WarmDM rewrites any DM, email, or outreach so it sounds human, natural and non-cringe. No AI vibes — just real tone." />
+        content="WarmDM rewrites any DM, email or message so it sounds human — not robotic. Choose tone + persona for the perfect rewrite. No cringe, no AI vibes." />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="style.css" />
@@ -17,88 +17,179 @@
 
   <div class="page-shell">
 
+    <!-- HEADER -->
     <header class="header">
       <h1 class="logo">
         <span class="logo-icon">WM</span>
         WarmDM
       </h1>
 
-      <h2 class="title">Rewrite any message so it sounds human.</h2>
-      <p class="subtitle">No cringe. No AI vibes. Just natural tone.</p>
+      <h2 class="title">
+        Rewrite any message so it sounds human.
+      </h2>
+
+      <p class="subtitle">
+        No cringe. No AI vibes. Just natural tone.
+      </p>
     </header>
 
-    <!-- ===================== TOOL ===================== -->
+    <!-- TOOL -->
     <main>
-      <section class="app-container">
+      <section class="app-container" id="app">
 
-        <textarea id="inputMessage"
-          class="message-box"
-          placeholder="Paste your message — I won’t judge."></textarea>
+        <!-- Input -->
+        <section class="input-section">
+          <textarea
+            id="inputMessage"
+            placeholder="Paste your message — I won’t judge."></textarea>
 
-        <!-- TONE BUTTONS -->
-        <div class="section-label">How should it sound?</div>
+          <!-- Tone + toggle row -->
+          <div class="tone-header">How should it sound?</div>
 
-        <div class="button-row" id="toneButtons">
-          <button class="tone-btn active" data-tone="Warm">Warm</button>
-          <button class="tone-btn" data-tone="Casual">Casual</button>
-          <button class="tone-btn" data-tone="Authority">Authority</button>
-          <button class="tone-btn" data-tone="Cheeky">Cheeky</button>
-          <button class="tone-btn" data-tone="AI-Undetectable">Undetectable</button>
-        </div>
+          <div class="tone-row">
+            <button class="tone-btn active" data-tone="Warm">Warm</button>
+            <button class="tone-btn" data-tone="Casual">Casual</button>
+            <button class="tone-btn" data-tone="Authority">Authority</button>
+            <button class="tone-btn" data-tone="Cheeky">Cheeky</button>
+            <button class="tone-btn" data-tone="AI-Undetectable">AI-Undetectable</button>
+          </div>
 
-        <!-- PERSONA BUTTONS -->
-        <div class="section-label">Who should say it?</div>
+          <!-- Personas -->
+          <div class="persona-row">
+            <span class="persona-label">Persona:</span>
+              <button type="button" class="persona-btn active" data-persona="Default">Default</button>
+              <button type="button" class="persona-btn" data-persona="Friendly founder">Friendly founder</button>
+              <button type="button" class="persona-btn" data-persona="Dry professional">Dry professional</button>
+              <button type="button" class="persona-btn" data-persona="Cheeky friend">Cheeky friend</button>
+              <button type="button" class="persona-btn" data-persona="Soft apology">Soft apology</button>
+          </div>
 
-        <div class="button-row" id="personaButtons">
-          <button class="persona-btn active" data-persona="Default">Default</button>
-          <button class="persona-btn" data-persona="Friendly founder">Friendly founder</button>
-          <button class="persona-btn" data-persona="Dry professional">Dry professional</button>
-          <button class="persona-btn" data-persona="Cheeky friend">Cheeky friend</button>
-          <button class="persona-btn" data-persona="Soft apology">Soft apology</button>
-        </div>
+          <label class="toggle-label">
+            <input type="checkbox" id="unfilteredToggle" />
+            Unfiltered 😈
+          </label>
 
-        <!-- UNFILTERED -->
-        <label class="toggle-label">
-          <input type="checkbox" id="unfilteredToggle" />
-          Unfiltered 😈
-        </label>
+          <div class="tone-tip">
+            Tone = vibe. Persona = voice. Combine both for the perfect rewrite.
+          </div>
 
-        <button id="rewriteBtn" class="primary-btn">
-          Make It Sound Human
-        </button>
+          <button id="rewriteBtn" class="primary-btn">
+            Make It Sound Human
+          </button>
+        </section>
 
+        <!-- Output -->
         <section class="output-section" id="outputSection"></section>
-
       </section>
 
-      <!-- LANDING PAGE SECTIONS (unchanged) -->
+      <!-- Landing Content -->
       <section class="info-section">
         <h3>What WarmDM actually does</h3>
         <p>
-          WarmDM rewrites messages with tone, not templates — helping you sound like a
-          real person instead of a robot trying to network politely.
+          WarmDM is a small, focused AI message rewriter. You paste a DM, email,
+          LinkedIn message, sales opener, or “uh… not my best work” text,
+          and it rewrites it so it sounds human — not like a robot trying to sell
+          you crypto in 2018.
         </p>
+        <p>
+          Instead of obsessing over grammar, WarmDM focuses on tone:
+          how your message <em>feels</em> when someone reads it. Warm, casual,
+          cheeky, more authoritative — you pick the vibe, it rewrites the message.
+        </p>
+
+        <div class="feature-grid">
+          <div class="feature-card">
+            <h4>AI message rewriter</h4>
+            <p>
+              Paste anything and get a human-sounding version back in seconds.
+              No templates, no forms, no overthinking — just rewrite and send.
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4>Tone that actually fits</h4>
+            <p>
+              Switch between Warm, Casual, Authority, Cheeky, or AI-Undetectable.
+              Same message, different delivery. Great for testing what gets replies.
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4>Built for real conversations</h4>
+            <p>
+              Use it for Twitter/X DMs, outreach, intros, dating apps, support messages —
+              anywhere sounding human matters more than sounding “perfect”.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section class="info-section">
-        <h3>How it works</h3>
+        <h3>Who WarmDM is for</h3>
+        <ul class="bullet-list">
+          <li><strong>Founders & indie hackers</strong> writing cold outreach.</li>
+          <li><strong>Creators & marketers</strong> who want higher reply rates.</li>
+          <li><strong>Operators & PMs</strong> sending “one shot” messages.</li>
+          <li><strong>Anyone</strong> who reads their message and thinks: “Nope, that’s not it.”</li>
+        </ul>
+      </section>
+
+      <section class="info-section">
+        <h3>How it works (in 20 seconds)</h3>
         <ol class="inline-steps">
           <li><span>1</span> Paste your message.</li>
-          <li><span>2</span> Pick how it should sound.</li>
-          <li><span>3</span> Choose a persona.</li>
-          <li><span>4</span> Click “Make It Sound Human”.</li>
+          <li><span>2</span> Pick a tone + persona.</li>
+          <li><span>3</span> Click “Make It Sound Human”.</li>
+          <li><span>4</span> Copy the version that feels right.</li>
         </ol>
+      </section>
+
+      <section class="info-section seo-block">
+        <h3>WarmDM as an AI message rewriter</h3>
+        <p>
+          Under the hood, WarmDM keeps your meaning but rewrites your delivery so it sounds
+          like a real human wrote it — softer, smoother, funnier, or more confident.
+        </p>
+        <p>
+          It doesn’t try to write blog posts or funnels — it just helps you send messages
+          that people actually want to reply to.
+        </p>
       </section>
 
       <section class="info-section faq-section">
         <h3>FAQ</h3>
 
         <div class="faq-item">
-          <h4>Is this the same as Grammarly?</h4>
-          <p>No. Grammarly fixes correctness. WarmDM fixes tone — the part that makes people actually reply.</p>
+          <h4>Is WarmDM the same as Grammarly?</h4>
+          <p>
+            No. Grammarly is about correctness. WarmDM is about tone.
+            It assumes your basic message is fine and focuses on making it sound
+            more human, less stiff, and more likely to get a reply.
+          </p>
         </div>
 
+        <div class="faq-item">
+          <h4>Does WarmDM store my messages?</h4>
+          <p>
+            Messages are processed by the model but not stored for product training.
+            Avoid pasting highly sensitive info — treat it like any external tool.
+          </p>
+        </div>
+
+        <div class="faq-item">
+          <h4>Will there be paid plans later?</h4>
+          <p>
+            Yes — once traction proves what people need.
+          </p>
+        </div>
+
+        <div class="faq-item">
+          <h4>What kind of messages does it work best on?</h4>
+          <p>
+            DMs, intros, follow-ups, soft pitches, outreach, apologies, dating apps,
+            support replies — anywhere sounding human matters.
+          </p>
+        </div>
       </section>
+
     </main>
 
     <footer class="footer">
