Batch A UI cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,6 @@
           <div class="tone-header">How should it sound?</div>
 
           <div class="tone-row">
-              <span class="tone-label">How should it sound?</span>
-
               <button class="tone-btn active" data-tone="AI-Undetectable">AI-Undetectable</button>
               <button class="tone-btn" data-tone="Warm">Warm</button>
               <button class="tone-btn" data-tone="Casual">Casual</button>
@@ -57,8 +55,9 @@
           </div>
 
           <!-- Personas -->
+          <div class="persona-header">Who should say it?</div>
+
           <div class="persona-row">
-            <span class="persona-label">Persona:</span>
               <button type="button" class="persona-btn active" data-persona="Default">Default</button>
               <button type="button" class="persona-btn" data-persona="Friendly founder">Friendly founder</button>
               <button type="button" class="persona-btn" data-persona="Dry professional">Dry professional</button>
@@ -72,11 +71,8 @@
               <span class="toggle-slider"></span>
             </label>
               <span class="toggle-text">Unfiltered Mode 😈</span>
-              <span class="tooltip" title="Unfiltered removes guardrails and rewrites exactly as instructed. Use responsibly.">?</span>
-          </div>
-
-          <div class="tone-tip">
-            Tone = vibe. Persona = voice. Combine both for the perfect rewrite.
+              <span class="tooltip" title="Lets the AI go a little wild — bolder, flirtier, more chaotic rewrites. Use your judgment 😈"> ⓘ
+              </span>
           </div>
 
           <button id="rewriteBtn" class="primary-btn">
